test/ui/non_option_nullable.stderr
error: `#[nullable]` may only be used on fields of type `Option<T>`.
 --> test/ui/non_option_nullable.rs:6:5
  |
6 |     x: u64,
  |     ^
