test/ui/non_option_nullable.rs
use serde_option::serde_option;

#[serde_option]
struct Foo {
    #[nullable]
    x: u64,
}

fn main() {}
